--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Odin-Recipes</h1>
-    <a href="Recipes/Chicken_Biryani.html">Chicken Biryani</a>
+    <ul>
+        <li> <a href="Recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
+        <li> <a href="Recipes/Gobi Manchurian.html">Gobi Manchurian</a></li>
+    </ul>
+   
+   
+
 </body>
 </html>
