Added CSS file to the peoject

--- a/Recipes/Chicken_Biryani.html
+++ b/Recipes/Chicken_Biryani.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Chicken Biryani Recipe</title>
 </head>
-<body>
-    <h1>Chicken Biryani</h1>
+<body class="chicken-biryani">
+    <header>
+        <h1>Chicken Biryani</h1>
+    </header>
     <img src="https://static.toiimg.com/thumb/53096628.cms?imgsize=104874&width=500&height=500" alt="Chicken Biryani">
     <p>Chicken biryani is a delicious Indian rice dish. It has a lengthy preparation, but the work is definitely worth it. For biryani, basmati rice is the ideal variety to use.</p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="Ingredients">
         <li>4 tablespoons vegetable oil, divided</li>
         <li>4 small potatoes, peeled and halved</li>
         <li>2 large onions, finely chopped</li>
