--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Odin Recipes</title>
 </head>
-<body>
-    <h1>Odin-Recipes</h1>
-    <ul>
+<body class="home">
+    <header>
+        <h1>Odin-Recipes</h1>
+    </header>
+    <ul class="recipe-list">
         <li> <a href="Recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
         <li> <a href="Recipes/Gobi Manchurian.html">Gobi Manchurian</a></li>
     </ul>
