progressed further with css

--- a/Recipes/Chicken_Biryani.html
+++ b/Recipes/Chicken_Biryani.html
@@ -10,40 +10,42 @@
     <header>
         <h1>Chicken Biryani</h1>
     </header>
-    <img src="https://static.toiimg.com/thumb/53096628.cms?imgsize=104874&width=500&height=500" alt="Chicken Biryani">
-    <p>Chicken biryani is a delicious Indian rice dish. It has a lengthy preparation, but the work is definitely worth it. For biryani, basmati rice is the ideal variety to use.</p>
+    <div class="recipe-intro">
+        <img src="https://static.toiimg.com/thumb/53096628.cms?imgsize=104874&width=500&height=500" alt="Chicken Biryani">
+        <p>Chicken biryani is a delicious Indian rice dish. It has a lengthy preparation, but the work is definitely worth it. For biryani, basmati rice is the ideal variety to use.</p>
+    </div>
 
-    <h2>Ingredients</h2>
-    <ul class="Ingredients">
-        <li>4 tablespoons vegetable oil, divided</li>
-        <li>4 small potatoes, peeled and halved</li>
-        <li>2 large onions, finely chopped</li>
-        <li>2 cloves garlic, minced</li>
-        <li>1 tablespoon minced fresh ginger root</li>
-        <li>2 medium tomatoes, peeled and chopped</li>
-        <li>1 teaspoon salt</li>
-        <li>1 teaspoon ground cumin</li>
-        <li>½ teaspoon chili powder</li>
-        <li>½ teaspoon ground black pepper</li>
-        <li>½ teaspoon ground turmeric</li>
-        <li>2 tablespoons plain yogurt</li>
-        <li>2 tablespoons chopped fresh mint leaves</li>
-        <li>½ teaspoon ground cardamom</li>
-        <li>1 (2 inch) piece cinnamon stick</li>
-        <li>1 kg boneless, skinless chicken pieces cut into chunks</li>
-        <li>1 Kg Rice</li>
-    </ul>
-
-    <h2>Process</h2>
-    <ol type="1">
-        <li>Heat oil in Skillet. Fry Potatoes until lightly Browned. Remove and keep separately.</li>
-        <li>Add More oil to fry Onions Until Golden Brown</li>
-        <li>In remaining oil add ginger garlic paste and saute till raw smell goes away. Add tomatoes, salt, cumin, chilly powder and turmeric; cook, stirring constantly for around 5 mins. </li>
-        <li>Add the chicken and cook on high heat for a minute a two two lock in the juices of chicken. add Yogurt and keep stirring for another two to three minutes. Close the lid and cook chicken till its 90% or almost done</li>
-        <li>In a seperate pot boil rice </li>
-        <li>Finaly layer the rice garvy and chicken in  a pot</li>
-
-    </ol>
+    <div class="recipe-main">
+        <h2>Ingredients</h2>
+        <ul class="Ingredients">
+            <li>4 tablespoons vegetable oil, divided</li>
+            <li>4 small potatoes, peeled and halved</li>
+            <li>2 large onions, finely chopped</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 tablespoon minced fresh ginger root</li>
+            <li>2 medium tomatoes, peeled and chopped</li>
+            <li>1 teaspoon salt</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>½ teaspoon chili powder</li>
+            <li>½ teaspoon ground black pepper</li>
+            <li>½ teaspoon ground turmeric</li>
+            <li>2 tablespoons plain yogurt</li>
+            <li>2 tablespoons chopped fresh mint leaves</li>
+            <li>½ teaspoon ground cardamom</li>
+            <li>1 (2 inch) piece cinnamon stick</li>
+            <li>1 kg boneless, skinless chicken pieces cut into chunks</li>
+            <li>1 Kg Rice</li>
+        </ul>
+        <h2>Process</h2>
+        <ol type="1">
+            <li>Heat oil in Skillet. Fry Potatoes until lightly Browned. Remove and keep separately.</li>
+            <li>Add More oil to fry Onions Until Golden Brown</li>
+            <li>In remaining oil add ginger garlic paste and saute till raw smell goes away. Add tomatoes, salt, cumin, chilly powder and turmeric; cook, stirring constantly for around 5 mins. </li>
+            <li>Add the chicken and cook on high heat for a minute a two two lock in the juices of chicken. add Yogurt and keep stirring for another two to three minutes. Close the lid and cook chicken till its 90% or almost done</li>
+            <li>In a seperate pot boil rice </li>
+            <li>Finaly layer the rice garvy and chicken in  a pot</li>
+        </ol>
+    </div>
 
 
 </body>
