--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <header>
         <h1>Odin-Recipes</h1>
     </header>
-    <ul class="recipe-list">
-        <li> <a href="Recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
-        <li> <a href="Recipes/Gobi Manchurian.html">Gobi Manchurian</a></li>
-    </ul>
-   
+    <div class="recipes">
+        <ul class="recipe-list">
+            <li> <a href="Recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
+            <li> <a href="Recipes/Gobi Manchurian.html">Gobi Manchurian</a></li>
+        </ul>
+    </div>
    
 
 </body>
